# google-scholar-semantic-mongodb

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/src/: app_containers.py  config.ini  main.py
app/src/domain/: abstract_link.py  crossref.py  email.py  email_body.py  link.py  sciencedirect_link.py  search_result.py
app/src/domain/common/: entity.py
app/src/services/: crossref_service.py  db_service.py  email_service.py  logging_service.py  parse_service.py  search_DOI_content_searched_state.py  search_DOI_crossref_searched_state.py  search_DOI_embedded_searched_state.py  search_DOI_link_searched_state.py  search_DOI_replaced_state.py  search_DOI_service.py  search_DOI_state.py  search_DOI_unprocessed_state.py  semantic_search_service.py
app/src/shared/: helper.py
